# guardkit

./: .agent-request.json  .clarification_execution.py  .claude.json  .coverage  .env.example  .gitignore  .mcp.json  .template-create-state.json  .template-init-session.json  .tmp_clarification_context_sensitive_coach.py  CHANGELOG.md  CLARIFICATION_EXECUTION_TASK-FBSDK-020.md  CLARIFICATION_QUICK_REFERENCE.md  CLARIFICATION_SUMMARY.md  CLAUDE.md  CNAME  CONTRIBUTING.md  DEBUG-PHASE-7-5.md  DEBUGGING-PHASE-7-5-NOT-RUNNING.md  DEBUG_AGENT_ENHANCEMENT.md  DESIGN-DELIVERY-SUMMARY.md  DIAGNOSIS-AGENT-ENHANCEMENT-SILENT-FAILURE.md  FIX-DUPLICATE-MARKER.md  FIX-SUMMARY.md  FIX_PD05_README.md  FastApi_feature_plans.md  IMPLEMENTATION-SUMMARY-TASK-AB-584A.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_TASK-ENF1.md  LICENSE  PARALLELS-VM-TEST-PLAN-FOCUSED.md  README.md  RUN_FIX_NOW.py  SESSION-SUMMARY-PHASE-7-5-SILENT-FAILURE.md  TASK-009-COMPLETION-REPORT.md  TASK-010-IMPLEMENTATION-SUMMARY.md  TASK-011-TEST-FIX-SUMMARY.md  TASK-022-COMPLETION-SUMMARY.md  TASK-035-COMPARISON-WITH-AI-ENGINEER.md  (+72 more)
.claude/: CLAUDE.md  apply_fix_pd05_inline.py  settings.json
.claude/agents/: autobuild-coach.md  autobuild-player.md  code-reviewer.md  debugging-specialist-ext.md  debugging-specialist.md  qa-tester.md  task-manager.md  test-orchestrator.md  test-verifier.md
.claude/commands/: context-switch.md  impact-analysis.md  system-overview.md  system-plan.md  task-status.md  task-work.md
.claude/reports/: TASK-PHASE-7-5-BATCH-PROCESSING-FIX-REGRESSION-test-verification.md  TASK-PHASE-7-5-FIX-FOUNDATION-FINAL-REPORT.md  TASK-PHASE-7-5-FIX-FOUNDATION-RECOMMENDATIONS.md  TASK-PHASE-7-5-FIX-FOUNDATION-SUMMARY.txt  TASK-PHASE-7-5-FIX-FOUNDATION-test-analysis.md  TASK-PHASE-7-5-FIX-FOUNDATION-test-results.json
.claude/reviews/: REV-SD-001-review-report.md  TASK-037-code-review.md  TASK-056-architectural-review.md  TASK-056-complexity-evaluation.md  TASK-056-discovery-findings.md  TASK-056-plan-audit.md  TASK-060-architectural-review.md  TASK-060-code-review.md  TASK-060-complexity-evaluation.md  TASK-060-plan-audit.md  TASK-060A-test-verification-report.md  TASK-895A-review-report.md  (+345 more)
.guardkit/: bootstrap_state.json  graphiti.yaml  graphiti.yaml.bak-2026-05-30-gemma4-test  graphiti.yaml.pre-llamacpp.bak  llm-provider-switching.md
api/: exceptions.py
conversation_history/: session_146131bb.md  session_29471071.md  session_812005c5.md  session_8e387e00.md
coverage/: coverage-final.json
docker/: docker-compose.falkordb-test.yml  docker-compose.graphiti.yml
docs/: advanced.md  agents.md  concepts.md  github-pages-deployment-guide.md  index.md  make_sure_subagents_are_used.md  mcp-integration.md  requirements.txt  task-review.md  task-types-schema.md  templates.md  troubleshooting.md
examples/: agent_scanner_usage.py  demo_agent_tracker_integration.py  demo_phase_gate_integration.py  demo_plan_markdown.py  demo_template_qa.py  progress_display_demo.py  verify_micro_implementation.sh
guardkit/: __init__.py  _group_defs.py
installer/: CHANGELOG.md  EXTENDING_THE_SYSTEM.md  __init__.py
large_tool_results/: fc_Nu9QIrQkIllhluFTMZWmrnZLtNDiZdRm  fc_stabIcEdzPsQ7fGFqFFOg986797u41dq
measurements/: .gitignore  README.md
scripts/: audit_requirekit.py  backup-pre-rename.sh  canary_validation_runner.py  check-graphiti-doc-drift.py  copy-agents-to-templates.sh  curate_coach_dataset.py  finalize_coach_corrective.py  fix-template-agents.sh  graphiti-backup.sh  graphiti-endpoint-toggle.sh  graphiti-mcp-bootstrap.py  graphiti-mcp-build.sh  graphiti-mcp-config.yaml  graphiti-mcp.sh  graphiti-stack-down.sh  graphiti-stack-up.sh  harvest_coach_dataset.py  infra-down.sh  infra-status.sh  infra-up.sh  install-git-hooks.sh  llama-swap-healthcheck.service  llama-swap-healthcheck.sh  llama-swap-healthcheck.timer  llama-swap-keepalive.service  llama-swap-keepalive.sh  llama-swap-keepalive.timer  measure-token-usage.py  migrate-agent-content.py  migrate-my-tasks.py  pre-push.sh  preflight_009a.py  readme.md  rename-taskwright-to-guardkit.py  setup-epic001-wave0.sh  split_agent.py  test-progressive-disclosure.sh  validate-rename.sh  validate_agent_metadata.py  verify-duplication.sh  (+4 more)
tasks/: test_task.md
templates/mcp-server-python/: .mcp.docker.json.template  .mcp.json.template  README.md  conftest.py  pyproject.toml  requirements.txt
templates/mcp-server-python/docker/: Dockerfile  docker-compose.yml
templates/mcp-server-python/docs/: setup.md
templates/mcp-server-python/src/: __init__.py  __main__.py
templates/mcp-server-python/src/auth/: __init__.py  oauth.py  resource_indicators.py
templates/mcp-server-python/src/resources/: __init__.py
templates/mcp-server-python/src/tools/: __init__.py  example_tools.py
templates/mcp-server-python/tests/protocol/: __init__.py  test_mcp_protocol.sh
templates/mcp-server-python/tests/unit/: test_auth.py  test_tools.py
test-agents/: test-repository-specialist.md
tests/: README-TASK-007-TESTS.md  README-TASK-008-TESTS.md  README-TASK-011F.md  README.md  TASK-007-TEST-RESULTS.md  TASK-008-FINAL-TEST-RESULTS.txt  TASK-008-TEST-OUTPUT.txt  TASK-008-TEST-RESULTS.txt  TASK-008-VALIDATION-REPORT.md  TASK-008-coverage.json  TASK-011F-DELIVERABLES.md  TASK-011F-TEST-REPORT.md  TASK-011G-TEST-REPORT.md  TASK-011G-TEST-SUMMARY.md  TASK-011H-COMPREHENSIVE-TEST-REPORT.md  TASK-011H-DETAILED-FINDINGS.md  TASK-011H-IMPLEMENTATION-SUMMARY.md  TASK-011H-TEST-EXECUTION-SUMMARY.md  TASK-011H-TEST-REPORT.md  TASK-028-TEST-EXECUTION-REPORT.md  TASK-029-TEST-EXECUTION-REPORT.md  TEST-REPORT-TASK-IMP-D93B.md  TEST_RESULTS_TASK_011E.md  __init__.py  conftest.py  coverage-agent-enhancement-full.json  coverage-boundaries.json  coverage.json  coverage_config.py  coverage_mcp.json  coverage_task028.json  demo_task_completion.py  quarantine.txt  test_agent_discovery.py  test_agent_enhance_validation.py  test_agent_installer_verification.py  test_agent_orchestration.py  test_agentic_init_discovery.py  test_claude_md.py  test_distribution_helpers.py  (+33 more)
(+9782 files in other folders)
