[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guardkit-py"
dynamic = ["version"]
description = "Lightweight AI-Assisted Development Framework"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "GuardKit Contributors", email = "noreply@guardkit.dev"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "python-frontmatter>=1.0.0",
    "pydantic>=2.0.0",
    "Jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "graphiti-core>=0.5.0",
    "gherkin-official>=29.0.0",
]

[project.optional-dependencies]
# Claude Agent SDK for AutoBuild Player/Coach adversarial workflow
# Requires Python 3.10+ (same as guardkit)
# Docs: https://platform.claude.com/docs/en/agent-sdk/python
autobuild = [
    # Lower bound 0.1.49 = first release with typed RateLimitEvent parsing
    # (TASK-FIX-7A01 / TASK-REV-E4F5 F1). Upper bound <0.2 reflects upstream's
    # 0.1.x series as the stable surface; re-audit before bumping past 0.2.
    "claude-agent-sdk>=0.1.49,<0.2",
]
# FalkorDB graph store backend (alternative to Neo4j)
# Installs graphiti-core with FalkorDB support
falkordb = [
    "graphiti-core[falkordb]",
]
# Google Gemini LLM client for Graphiti entity extraction
# Required when .guardkit/graphiti.yaml sets llm_provider: gemini
gemini = [
    "graphiti-core[google-genai]",
]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    # pytest-bdd: GuardKit dogfoods the dependency it requires of all consumers
    # of the BDD oracle (TASK-FIX-BDDM-1 strict-fail behaviour). Added per
    # TASK-OPS-BDDM-10 / FEAT-BDDM (2026-04-26). Lower bound 8.1 = forge's pin
    # (forge/pyproject.toml:34); upper bound <9 reflects pytest-bdd's 8.x
    # series as the stable surface — re-audit before bumping.
    "pytest-bdd>=8.1,<9",
    "httpx>=0.25.1",
]
all = [
    "claude-agent-sdk>=0.1.49,<0.2",
    "graphiti-core[falkordb]",
    "graphiti-core[google-genai]",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    # See dev group above (TASK-OPS-BDDM-10 / FEAT-BDDM).
    "pytest-bdd>=8.1,<9",
    "httpx>=0.25.1",
]

[project.scripts]
guardkit-py = "guardkit.cli.main:main"

[project.urls]
Homepage = "https://github.com/guardkit/guardkit"
Documentation = "https://github.com/guardkit/guardkit/tree/main/docs"
Repository = "https://github.com/guardkit/guardkit"
Issues = "https://github.com/guardkit/guardkit/issues"

[tool.hatch.version]
path = "guardkit/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["guardkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=guardkit --cov-report=term --cov-report=json"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "seam: Seam (technology boundary) integration tests",
    "e2e: End-to-end integration tests",
    "slow: Slow-running tests",
    "real_world: Real-world scenario tests",
    "integration: Integration tests between modules",
]
