[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guardkit-py"
dynamic = ["version"]
description = "Lightweight AI-Assisted Development Framework"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "GuardKit Contributors", email = "noreply@guardkit.dev"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
# Floor is 3.11, not 3.10 (TASK-INFRA-CIGREEN, 2026-06-11): the orchestrator
# uses asyncio.timeout() (PEP 654, 3.11+) throughout — see
# guardkit/orchestrator/{agent_invoker,autobuild}.py and the harness package.
# Under 3.10 this produced ~26 failures + 4 collection-error modules. Backporting
# async_timeout for genuine 3.10 support is a much larger scope and not worth it;
# we pick the floor that matches the syntax already in use. CI gates on 3.11+3.12.
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "python-frontmatter>=1.0.0",
    "pydantic>=2.0.0",
    "Jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "graphiti-core @ git+https://github.com/guardkit/graphiti.git@v0.29.5-guardkit.1",
    "gherkin-official>=29.0.0",
]

[project.optional-dependencies]
# Claude Agent SDK for AutoBuild Player/Coach adversarial workflow
# Requires Python 3.11+ (same as guardkit)
# Docs: https://platform.claude.com/docs/en/agent-sdk/python
autobuild = [
    # Lower bound 0.1.49 = first release with typed RateLimitEvent parsing
    # (TASK-FIX-7A01 / TASK-REV-E4F5 F1). Upper bound <0.2 reflects upstream's
    # 0.1.x series as the stable surface; re-audit before bumping past 0.2.
    "claude-agent-sdk>=0.1.49,<0.2",
    # TASK-HMIG-006 AC-005: cross-repo dispatch through the
    # HarnessAdapter substrate seam. Resolved from a sibling repo in
    # operator-side dev via [tool.uv.sources] below; end-user installs
    # pick up whichever release matches the version contract.
    "guardkitfactory>=0.1,<1",
]
# FalkorDB graph store backend (alternative to Neo4j)
# Installs graphiti-core with FalkorDB support
falkordb = [
    "graphiti-core[falkordb] @ git+https://github.com/guardkit/graphiti.git@v0.29.5-guardkit.1",
]
# Google Gemini LLM client for Graphiti entity extraction
# Required when .guardkit/graphiti.yaml sets llm_provider: gemini
gemini = [
    "graphiti-core[google-genai] @ git+https://github.com/guardkit/graphiti.git@v0.29.5-guardkit.1",
]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    # pytest-timeout: GuardKit dogfoods the per-test timeout the Coach injects
    # into its isolated pytest run so a single hanging test is named-FAILED
    # rather than consuming the whole subprocess budget (TASK-ABFIX-011). Inert
    # by default (no global `timeout` in addopts) and the Coach injection is
    # probe-gated, so it only takes effect for guardkit's own worktree venvs.
    # Lower bound 2.1 = `--timeout-method` stable; upper bound <3 = 2.x stable
    # surface — re-audit before bumping.
    "pytest-timeout>=2.1,<3",
    # pytest-bdd: GuardKit dogfoods the dependency it requires of all consumers
    # of the BDD oracle (TASK-FIX-BDDM-1 strict-fail behaviour). Added per
    # TASK-OPS-BDDM-10 / FEAT-BDDM (2026-04-26). Lower bound 8.1 = forge's pin
    # (forge/pyproject.toml:34); upper bound <9 reflects pytest-bdd's 8.x
    # series as the stable surface — re-audit before bumping.
    "pytest-bdd>=8.1,<9",
    "httpx>=0.25.1",
]
all = [
    "claude-agent-sdk>=0.1.49,<0.2",
    "guardkitfactory>=0.1,<1",
    "graphiti-core[falkordb] @ git+https://github.com/guardkit/graphiti.git@v0.29.5-guardkit.1",
    "graphiti-core[google-genai] @ git+https://github.com/guardkit/graphiti.git@v0.29.5-guardkit.1",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    # See dev group above (TASK-ABFIX-011 / TASK-OPS-BDDM-10 / FEAT-BDDM).
    "pytest-timeout>=2.1,<3",
    "pytest-bdd>=8.1,<9",
    "httpx>=0.25.1",
]

[tool.uv.sources]
# TASK-HMIG-006 D-5: sibling-repo editable resolution for the unpublished
# guardkitfactory package. Matches the jarvis / specialist-agent fleet
# convention for nats-core. Operator-side dev runs
# `uv sync --extra autobuild` (or `pip install -e ../guardkitfactory`) to
# pick up the editable install. End users on PyPI get the version-pinned
# release once guardkitfactory ships there; until then, the [tool.uv.sources]
# block is the resolution path. See docs/guides/portfolio-python-pinning.md.
guardkitfactory = { path = "../guardkitfactory", editable = true }

[project.scripts]
guardkit-py = "guardkit.cli.main:main"

[project.urls]
Homepage = "https://github.com/guardkit/guardkit"
Documentation = "https://github.com/guardkit/guardkit/tree/main/docs"
Repository = "https://github.com/guardkit/guardkit"
Issues = "https://github.com/guardkit/guardkit/issues"

[tool.hatch.metadata]
# Allow direct git+ URL references for the graphiti-core fork pin
# (graphiti-core @ git+https://github.com/guardkit/graphiti.git@v0.29.5-guardkit.1).
# Required by hatchling 2.4+ metadata spec; without this the build backend
# refuses to construct project metadata when dependencies use direct URLs.
allow-direct-references = true

[tool.hatch.version]
path = "guardkit/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["guardkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=guardkit --cov-report=term --cov-report=json"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "seam: Seam (technology boundary) integration tests",
    "e2e: End-to-end integration tests",
    "slow: Slow-running tests",
    "real_world: Real-world scenario tests",
    "integration: Integration tests between modules",
]
